# nt

./: .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  GOV_DATA_SOURCES.md  HOUSE_CRITERIA.md  NT_SOURCES.md  README.md  docker-compose.yml  prod.yml
backend/: Dockerfile  conftest.py  manage.py  pyproject.toml
backend/apps/cadastre/: admin.py  api.py  apps.py  models.py  tasks.py
backend/apps/cadastre/migrations/: 0001_initial.py
backend/apps/cadastre/services/: geoportal.py  kretinga_gis.py
backend/apps/cadastre/tests/: test_api.py  test_models.py
backend/apps/classifier/: admin.py  api.py  apps.py  dedup.py  models.py  prompts.py  services.py  tasks.py
backend/apps/classifier/migrations/: 0001_initial.py  0002_change_classified_at_to_auto_now.py  0003_add_listing_cluster.py
backend/apps/classifier/tests/: test_api.py  test_models.py  test_services.py
backend/apps/developers/: admin.py  api.py  apps.py  models.py  tasks.py
backend/apps/developers/migrations/: 0001_initial.py
backend/apps/developers/tests/: test_api.py  test_import_command.py  test_models.py
backend/apps/documents/: admin.py  apps.py  models.py
backend/apps/documents/migrations/: 0001_initial.py
backend/apps/documents/tests/: test_models.py
backend/apps/geo/: apps.py
backend/apps/listings/: admin.py  baker_recipes.py  models.py  tasks.py
backend/apps/listings/migrations/: 0001_initial.py  0002_excludedlisting.py
backend/apps/listings/tests/: test_exclusion.py  test_models.py  test_validity.py
backend/apps/permits/: admin.py  api.py  apps.py  models.py  tasks.py
backend/apps/permits/migrations/: 0001_initial.py
backend/apps/planning/: admin.py  api.py  apps.py  models.py  tasks.py
backend/apps/search/: admin.py  api.py  models.py  tasks.py
backend/config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
frontend/: Dockerfile  (+4 more)
scrapers/: Dockerfile  django_setup.py  pyproject.toml  scrapy.cfg
scrapers/realestate_spiders/: items.py  middlewares.py  pipelines.py  settings.py
scrapers/realestate_spiders/spiders/: infostatyba.py  test_spider.py  tpdris.py
(+50 files in other folders)
